--- a/style.css
+++ b/style.css
@@ -169,9 +169,9 @@ nav{
     margin-left: 100px;
     width: 100%;
 }
-.chef{
+/* .chef{
     margin-top: 100px;
-}
+} */
 .btn-browse{
     background-color: #fff;
     border: 2px solid #00BCF5;
@@ -269,7 +269,7 @@ nav{
 }
 
 /* RESPONSIVENESS */
-    @media (min-width: 576px) and  (max-width: 767px){ 
+    @media (min-width: 576px) and  (max-width: 767px){
     .chef{
         margin-top: 0px;
     }
@@ -277,7 +277,7 @@ nav{
         font-size: 15px;
     }
     .my{
-        margin-top: -300px !important;
+        margin-top: 10px !important;
         padding: 10px !important;
     }
     .master{
@@ -343,8 +343,9 @@ nav{
     }
     .rect{
         position: relative !important;
-        left: 470px !important;
-        top: -305px !important;
+        width: 100%;
+        left: 0px !important;
+        top: -0px !important;
     }
     .africa{
         width: 100% !important; 
@@ -379,7 +380,7 @@ nav{
         padding-left: 10px !important;
     }
     .copy{
-        margin-top: 60px;
+        margin-top: 60px !important;
     }
     .research{
         font-size: 15px;
@@ -411,6 +412,13 @@ nav{
 }  
 
  @media (min-width: 0px) and (max-width: 576px) {
+    .rect{
+        position: relative !important;
+        width: 100% !important;
+        left: 30px !important;
+        top: -25px !important;
+        left: 0px !important;
+    }
     nav{
         height: fit-content !important;
     }
@@ -505,12 +513,10 @@ nav{
         text-align: center !important;
     }
     .tool{
-        width: 17% !important;
-        margin-left: 130px !important;
-        margin-top: 20px !important;
+        width: 0% !important;
     }
     .my{
-        margin-top: 50px !important;
+        margin-top: 10px !important;
         padding-bottom: 10px !important;
     }
     .chef{
@@ -593,6 +599,9 @@ nav{
     }
 } 
       @media(min-width: 768px) and (max-width: 991px){
+          .africa{
+              width: 100% !important;
+          }
         .fleet{
             display: none;
         }
@@ -635,7 +644,7 @@ nav{
             width: 90% !important;
         }
         .chef{
-            margin-top: 90px !important;
+            margin-top: 0px !important;
         }
         .draw{
             width: 123% !important;
@@ -667,6 +676,10 @@ nav{
             padding-left: 20px !important;
             padding-right: 40px !important;
             margin-right: 10px !important;
+        }
+        .my{
+            margin-top: -250px !important;
+            padding: 10px;
         }
     
 } 
@@ -713,7 +726,7 @@ nav{
             width: 90% !important;
         }
         .chef{
-            margin-top: 90px !important;
+            margin-top: 0px !important;
         }
         .draw{
             width: 123% !important;
@@ -759,6 +772,10 @@ nav{
             padding-top: 5px;
             padding-bottom: 5px;
         }
+        .my{
+            margin-top: -250px !important;
+            padding: 10px;
+        }
     } 
     
     @media(min-width: 1200px) and (max-width: 1399px){
@@ -803,7 +820,7 @@ nav{
             width: 90% !important;
         }
         .chef{
-            margin-top: 90px !important;
+            margin-top: 0px !important;
         }
         .draw{
             width: 123% !important;
@@ -849,6 +866,10 @@ nav{
             padding-top: 5px;
             padding-bottom: 5px;
         }
+        .my{
+            margin-top: -250px !important;
+            padding: 10px;
+        }
        } 
 
        @media(min-width: 1400px){
@@ -893,7 +914,7 @@ nav{
             width: 90% !important;
         }
         .chef{
-            margin-top: 90px !important;
+            margin-top: 0px !important;
         }
         .draw{
             width: 123% !important;
@@ -938,6 +959,10 @@ nav{
             margin-top: 5px;
             padding-top: 5px;
             padding-bottom: 5px;
+        }
+        .my{
+            margin-top: -250px !important;
+            padding: 10px;
         }
        } 
    
